--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,4 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 android.dependency.useConstraints=true
 android.generateSyncIssueWhenLibraryConstraintsAreEnabled=false
+android.builtInKotlin=false
